--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming soon!)</a>
+    <a href="#">Download Excursion (Coming soon!)</a
   </body>
 </html>
