--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
+
     <meta charset="utf-8">
     <title>Excursions</title>
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
+
   </head>
+
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming soon!)</a
+
+    <div class="header">
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="#" class="link">Download Excursion (Coming soon!)</a>
+    </div>
+    <div class="video">
+      <p> <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+      </video> </p>
+    </div>
   </body>
+
 </html>
