--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
       <h1>Discover hidden places in the world around you</h1>
       <a href="#" class="link">Download Excursion (Coming soon!)</a>
     </div>
+
     <div class="video">
       <p> <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
       </video> </p>
     </div>
+
+    <div class="description">
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers the places you like, and recommends new points of interest around you</p>
+      
+    </div>
+
   </body>
 
 </html>
