--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="description">
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers the places you like, and recommends new points of interest around you</p>
-      
+      <p><img src="./resources/images/camp.jpg" alt="Camp"></p>
     </div>
 
   </body>
