Add closer & copyright

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       <p><img src="./resources/images/camp.jpg" alt="Camp"></p>
     </div>
 
+    <div class="closer">
+      <p><img src="./resources/images/phone.png" alt="Phone"></p>
+      <h1>Coming Soon for iPhone and Android</h1>
+      <a href="header" class="link">Donwload Excursion (Coming soon!)</a>
+    </div>
+
+    <div id="copyright">
+      <p>&copy Excursion</p>
+    </div>
+
   </body>
 
 </html>
