--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Excursions</title>
+    <title>Excursion</title>
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
 
   </head>
 
   <body>
 
-    <div class="header">
+    <div id="header">
       <h1>Discover hidden places in the world around you</h1>
       <a href="#" class="link">Download Excursion (Coming soon!)</a>
     </div>
@@ -23,17 +23,17 @@
 
     <div class="description">
       <h2>Your personal travel guide</h2>
-      <p>Excursion remembers the places you like, and recommends new points of interest around you</p>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p><img src="./resources/images/camp.jpg" alt="Camp"></p>
     </div>
 
     <div class="closer">
       <p><img src="./resources/images/phone.png" alt="Phone"></p>
-      <h1>Coming Soon for iPhone and Android</h1>
-      <a href="header" class="link">Donwload Excursion (Coming soon!)</a>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href="#header" class="link">Download Excursion (Coming soon!)</a>
     </div>
 
-    <div id="copyright">
+    <div id="copy">
       <p>&copy Excursion</p>
     </div>
 
