Mistake in css path corrected

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
 
   </head>
 
