--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="video">
-      <p> <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+      <p> <video autoplay muted loop> <source src="./resources/videos/excursion.mp4" type="video/mp4">
       </video> </p>
     </div>
 
@@ -33,7 +33,7 @@
       <a href="#header" class="link">Download Excursion (Coming soon!)</a>
     </div>
 
-    <div id="copy">
+    <div class="copy">
       <p>&copy Excursion</p>
     </div>
 
